<resources>
    <string name="app_name">BookNook</string>
    <string name="title_home">Home</string>
    <string name="title_boards">Boards</string>
    <string name="profile">Profile</string>
    <string name="book_name">Book Name</string>
    <string name="author_name">Author Name</string>
    <string name="done">Done</string>
    <string name="add_to_bookboard">Add to bookboard</string>
    <string name="name_of_board_title_here">Name of Board Title Here</string>
    <string name="saved_to_bookmarks">Saved to Bookmarked</string>
    <string name="book_cover">book cover</string>
    <string name="search_booknook">Search BookNook</string>
    <string name="popular">Popular</string>
    <string name="zero_books">0 Books</string>
    <string name="add_new_bookboard">add new bookboard</string>
    <string name="create">Create</string>
    <string name="enter_bookboard_name">Enter BookBoard name</string>
    <string name="are_you_sure_you_want_to_remove">Are you sure you want to remove</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="bookboard_name_here">BookBoard Name Here</string>
    <string name="book_title">Book Title</string>
    <string name="author_names">Author Names</string>
    <string name="remove">Remove</string>
    <string name="new_york_times_bestseller">New York Times Bestseller</string>
    <string name="description_here">Description here</string>
    <string name="testing_genre">Testing genre</string>
</resources>