<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_popup">
    <TextView
        android:id="@+id/bookName"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textWarning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/book_title"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:layout_margin="5dp"
        android:fontFamily="@font/dm_serif_display_italic"
        />
    <TextView
        android:id="@+id/bookAuthor"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bookName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/author_names"
        android:gravity="center_horizontal"
        android:textSize="12sp"
        android:fontFamily="@font/dm_serif_display_italic"
        />
    <TextView
        android:id="@+id/textWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_remove"
        android:textColor="#282828"
        android:layout_margin="10dp"
        android:fontFamily="@font/dm_serif_display_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/buttonRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookAuthor"
        >
        <Button
            android:id="@+id/button_delete"
            android:layout_width="80dp"
            android:layout_height="33dp"
            android:layout_margin="5dp"
            android:text="@string/remove"
            android:textSize="10sp"
            android:textColor="@color/dark_magenta"
            />
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="80dp"
            android:layout_height="33dp"
            android:layout_margin="5dp"
            android:text="@string/cancel"
            android:textSize="10sp"
            android:textColor="@color/dark_magenta"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>