<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.booknook.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/navigation_boards"
        android:name="com.example.booknook.ui.boards.BoardsFragment"
        android:label="@string/title_boards"
        tools:layout="@layout/fragment_boards">
        <action
            android:id="@+id/navigation_boards_to_oneBoard"
            app:destination="@id/navigation_one_board" />
    </fragment>

    <fragment
        android:id="@+id/navigation_one_board"
        android:name="com.example.booknook.ui.boards.OneBoardFragment"
        android:label="One Board"
        tools:layout="@layout/one_board_fragment" >
        <argument app:argType="com.example.booknook.ui.boards.BookBoard"
            android:name="BookBoard" />
    </fragment>


    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.booknook.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/navigation_profile_to_edit"
            app:destination="@+id/navigation_edit_profile"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.example.booknook.ui.profile.EditProfileFragment"
        android:label="Edit Profile"
        tools:layout="@layout/fragment_edit_profile"/>

</navigation>