<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="390dp"
    android:layout_height="450dp"
    android:layout_margin="10dp"
    android:background="@drawable/background_popup"
    android:padding="8dp">
    <ImageView
        android:id="@+id/bookCover"
        android:layout_width="125dp"
        android:layout_height="165dp"
        android:src="@drawable/empty_book_background"
        android:background="@color/cardview_dark_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="centerCrop"
        android:layout_margin="10dp"
        android:contentDescription="@string/book_cover" />
    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/bookCover"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:fontFamily="@font/dm_serif_display_regular"
        android:text="@string/book_title"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/bookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/bookCover"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/dm_serif_display_regular"
        android:text="@string/book_title"
        app:layout_constraintTop_toBottomOf="@id/bookTitle"
        />
    <TextView
        android:id="@+id/NewYorkTimesBestsellerTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_york_times_bestseller"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/bookCover"
        android:fontFamily="@font/dm_serif_display_italic"
        />
    <ScrollView
        android:id="@+id/descriptionScroll"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/NewYorkTimesBestsellerTag"
        >
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_here"
            android:textSize="19sp"
            />
    </ScrollView>
    <TextView
        android:id="@+id/genre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/book_genre"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/testing_genre"
        android:fontFamily="@font/dm_serif_display_regular"
        android:textSize="15sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/descriptionScroll"
        android:padding="3dp"
        />
    <TextView
        android:id="@+id/genre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/book_genre"
        app:layout_constraintStart_toEndOf="@id/genre1"
        android:text="@string/testing_genre"
        android:fontFamily="@font/dm_serif_display_regular"
        android:textSize="15sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/descriptionScroll"
        android:padding="3dp"
        />
    <TextView
        android:id="@+id/genre3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/book_genre"
        app:layout_constraintStart_toEndOf="@id/genre2"
        android:text="@string/testing_genre"
        android:fontFamily="@font/dm_serif_display_regular"
        android:textSize="15sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/descriptionScroll"
        android:padding="3dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>