<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/SavedToBookmarksText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Saved to Bookmarks"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ImageView
        android:id="@+id/bookCover"
        android:layout_width="110dp"
        android:layout_height="160dp"
        android:background="@color/cardview_dark_background"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/SavedToBookmarksText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/bookCover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/AuthorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_name"
        android:textSize="15sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/AddToBookBoardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_bookboard"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="20sp"
        android:layout_marginStart="10sp"
        app:layout_constraintTop_toBottomOf="@id/AuthorText"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10dp"
        android:id="@+id/recyclerViewGrid"
        android:scrollbars="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/AddToBookBoardText"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewGrid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>