<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_popup">
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="25dp"
        android:hint="@string/enter_bookboard_name"
        android:textColorHint="#d1d1d1"
        android:fontFamily="@font/dm_serif_display_italic"
        />
    <FrameLayout
        android:id="@+id/NewBookBoardDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/bookCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_books"
            android:textColor="#282828"
            android:fontFamily="@font/dm_serif_display_regular"
            />
        <ImageButton
            android:id="@+id/publicIndicator"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="58dp"
            android:src="@drawable/baseline_lock_open_24"
            android:background="@color/fui_transparent"/>
    </FrameLayout>

    <Button
        android:id="@+id/button_create"
        android:layout_width="85dp"
        android:layout_height="38dp"
        android:text="@string/create"
        android:textSize="12sp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/NewBookBoardDetails"
        />

</androidx.constraintlayout.widget.ConstraintLayout>